--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ nav a{
     /*Size Cover: Ocupa todo el espacio
     Position Left: mueve la imagen*/
     background-size: cover;
-    background-position: center;
+    background-position: top;
     /*Position relative (Padre)*/
     position: relative;
 }
